-minor fixes in width calculation for tree layout -own js file for knowledge base (window on load for json data) -bugfixing for navigation / buttons

--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -74,7 +74,7 @@
 	</header>
 
 	<div class="container-fluid">
-		<div class="row row-offcanvas row-offcanvas-left active">
+<!-- 		<div class="row row-offcanvas row-offcanvas-left active">
 
 			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
 				id="sidebar" role="navigation">
@@ -103,7 +103,7 @@
 					<div id="visContent" class="col-md-10"></div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<footer class="footer">
