--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -33,61 +33,61 @@
 </head>
 
 <body>
-		<header class="navbar navbar-inverse navbar-static-top "
-			role="navigation">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed"
-						data-toggle="collapse" data-target="#navbar">
-						<span class="sr-only">Toggle navigation</span> <span
-							class="icon-bar"></span> <span class="icon-bar"></span> <span
-							class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
-				</div>
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-					<ul class="nav navbar-nav nav-justified">
-						<li><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span> --> <span><strong>
-										CloudDSF+</strong></span></a></li>
-						<li><a href="./cloudDSFPrototype.html"> <!-- <span
-							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
-						</a></li>
-						<li class="active"><a href="./knowledgeBase.html"> <!--  <span
-							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
-									Base</span>
-						</a></li>
-						<li><a href="./cloudDSFVisualizations.html"> <!--  <span
-							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
-									Visualizations</span>
-						</a></li>
-						<li><a href="./about.html"> <!-- <span
-							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
-						</a></li>
-					</ul>
-				</nav>
+	<header class="navbar navbar-inverse navbar-static-top "
+		role="navigation">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
-		</header>
 
-		<div class="navbar navbar-inverse navbar-static-top subnav"
-			role="navigation">
-			<div class="container">
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li class="active"><a id="btnList_treeLayout" href="#"> <span>Hierarchical
-								Layout</span>
+					<li><a href="./index.html"> <!-- <span
+							class="glyphicon glyphicon-home"></span> --> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
 					</a></li>
-					<li><a id="btnList_DecRel" href="#"> <span>Decision
-								Relations</span>
+					<li class="active"><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
 					</a></li>
-					<li><a id="btnList_OutRel" href="#"> <span>Outcome
-								Relations</span>
+					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
+								Visualizations</span>
+					</a></li>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
 					</a></li>
 				</ul>
-			</div>
+			</nav>
 		</div>
+	</header>
+
+	<div class="navbar navbar-inverse navbar-static-top subnav"
+		role="navigation">
+		<div class="container">
+			<ul class="nav navbar-nav nav-justified">
+				<li class="active"><a id="btnList_treeLayout" href="#"> <span>Hierarchical
+							Layout</span>
+				</a></li>
+				<li><a id="btnList_DecRel" href="#"> <span>Decision
+							Relations</span>
+				</a></li>
+				<li><a id="btnList_OutRel" href="#"> <span>Outcome
+							Relations</span>
+				</a></li>
+			</ul>
+		</div>
+	</div>
 
 	<div class="container">
 		<div class=row>
@@ -104,10 +104,9 @@
 			</div>
 		</div>
 		<div class=row>
-			<div class="col-md-12 center-block">
-				<!-- 	<div id="toolbarTree" class="hidden text-center"> -->
+			<div class="col-md-12">
 				<div id="toolbarTree"
-					class="btn-group btn-group-justified hidden text-center"
+					class="btn-group btn-group-justified text-center"
 					role="group">
 					<a id="showDps" class="btn btn-default" role="button">Show All
 						Decision Points</a> <a id="showDecs" class="btn btn-default"
@@ -136,9 +135,12 @@
 
 	<!-- Include for Visualization -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
+	<script src="js/knowledgeBase.js" type="text/javascript"></script>
 	<script src="js/treeLayout.js" type="text/javascript"></script>
 	<script src="js/outcomeRelations.js" type="text/javascript"></script>
 	<script src="js/decisionRelations.js" type="text/javascript"></script>
+
+
 
 </body>
 </html>
