decision relations are now with different dashings, arrow heads, highlighting of links, button select adjusted
rename of toggle function and removing of jump to top of page

--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -133,12 +133,12 @@ limitations under the License.
 			<div id="visRightDIV" class="col-md-2 col-lg-3">
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
-						<a id="visPanelSettingsIconToogle" href="#"> <span
+						<a id="visPanelSettingsIconToggle" href="#"> <span
 							class="glyphicon glyphicon-cog"></span>
 						</a>
 					</div>
 					<div class="visPanelHeaderLabel">
-						<a id="visPanelSettingsLabelToogle" href="#"> <span>Settings</span>
+						<a id="visPanelSettingsLabelToggle" href="#"> <span>Settings</span>
 						</a>
 					</div>
 					<div class="clearfix"></div>
@@ -147,12 +147,12 @@ limitations under the License.
 
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
-						<a id="visPanelInfoIconToogle" href="#"> <span
+						<a id="visPanelInfoIconToggle" href="#"> <span
 							class="glyphicon glyphicon-info-sign"></span>
 						</a>
 					</div>
 					<div class="visPanelHeaderLabel">
-						<a id="visPanelInfoLabelToogle" href="#"> <span>Information</span>
+						<a id="visPanelInfoLabelToggle" href="#"> <span>Information</span>
 						</a>
 					</div>
 					<div class="clearfix"></div>
