--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -93,7 +93,7 @@
 		<div class=row>
 			<div class="col-sm-12 col-md-12">
 				<!-- Toolbar for decision Graph -->
-				<div id="toolbarDecisions" class="hidden text-center">
+				<div id="toolbarDecisions" class="col-md-6 col-md-offset-3 text-center hidden">
 					<select id="relationTypes" multiple="multiple">
 						<option value="Influencing">Influencing</option>
 						<option value="Requiring">Requiring</option>
@@ -104,9 +104,9 @@
 			</div>
 		</div>
 		<div class=row>
-			<div class="col-md-12">
+			<div class="col-md-12 text-center">
 				<div id="toolbarTree"
-					class="btn-group btn-group-justified text-center"
+					class="btn-group btn-group-justified"
 					role="group">
 					<a id="showDps" class="btn btn-default" role="button">Show All
 						Decision Points</a> <a id="showDecs" class="btn btn-default"
