-refactoring of outcome relations -added size calculation and toggle functionality -new parameters for nice distribution of nodes -removed jitter through initial node setup (also leads to desired order) -possibility to fix dps after initial startup -toggling does not destroy layout to avoid confusion -minor layout and jquery fixes -responsive layout for cloudDSF Visualizations, sidepanel breaks earlier

--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -121,7 +121,7 @@ limitations under the License.
 		<!-- <hr style="margin-bottom: 0px;"> -->
 
 		<div class="row top-buffer">
-			<div id="visContentDIV" class="col-md-10 col-lg-9 text-center">
+			<div id="visContentDIV" class="col-lg-9 text-center">
 				<div id="visLabel">
 					<h4></h4>
 					<a id="vislabelInfo" href="#" tabindex="0" role="button"
@@ -130,7 +130,7 @@ limitations under the License.
 				</div>
 				<div id="visContent"></div>
 			</div>
-			<div id="visRightDIV" class="col-md-2 col-lg-3">
+			<div id="visRightDIV" class="col-lg-3">
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
 						<a id="visPanelSettingsIconToggle" href="#"> <span
