--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -91,7 +91,7 @@
 
 	<div class="container">
 		<div class=row>
-			<div class="col-sm-12 col-md-12">
+			<div class="col-md-12">
 				<!-- Toolbar for decision Graph -->
 				<div id="toolbarDecisions" class="col-md-6 col-md-offset-3 text-center hidden">
 					<select id="relationTypes" multiple="multiple">
@@ -118,9 +118,9 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="col-sm-12 col-md-12 col-lg-12">
-			<div class="row">
-				<div id="visContent"></div>
+		<div class="col-md-12 col-lg-12">
+			<div class="row text-center">
+				<div id="visContent" ></div>
 			</div>
 		</div>
 	</div>
