--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -30,6 +30,8 @@
 <script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
+	
+
 </head>
 
 <body>
@@ -112,6 +114,21 @@
 						Decision Points</a> <a id="showDecs" class="btn btn-default"
 						role="button">Show All Decisions</a> <a id="showOutcomes"
 						class="btn btn-default" role="button">Show All Outcomes</a>
+				</div>
+			</div>
+		</div>
+		
+				<div class=row>
+			<div class="col-md-12 text-center">
+				<div id="toolbarOutcomes"
+					class="btn-group btn-group-justified hidden"
+					role="group">
+					<a id="showAll" class="btn btn-default" role="button">Show All
+						Relations</a> <a id="hideAll" class="btn btn-default"
+						role="button">Hide All Relations</a> <a id="fixLayout"
+						class="btn btn-default" role="button">Fixated Layout</a>
+						<a id="looseLayout"
+						class="btn btn-default" role="button">Loose Layout</a>
 				</div>
 			</div>
 		</div>
