-layout fixes -increased decision relation width

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -93,10 +93,10 @@
 
 	<div class="container">
 		<div class=row>
-			<div class="col-md-12" style="margin-bottom:10px">
+			<div class="col-lg-12" style="margin-bottom: 10px">
 				<!-- Toolbar for decision Graph -->
 				<div id="toolbarDecisions"
-					class="col-md-6 col-md-offset-3 text-center hidden">
+					class="col-lg-6 col-lg-offset-3 text-center hidden">
 					<select id="relationTypes" multiple="multiple">
 						<option value="Influencing">Influencing</option>
 						<option value="Requiring">Requiring</option>
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 		<div class=row>
-			<div class="col-md-12 text-center" style="margin-bottom:10px" >
+			<div class="col-lg-12 text-center" style="margin-bottom: 10px">
 				<div id="toolbarTree" class="btn-group btn-group-justified"
 					role="group">
 					<a id="showDps" class="btn btn-default" role="button">Show All
@@ -119,8 +119,10 @@
 		</div>
 
 		<div class=row>
-			<div id="toolbarOutcomes" class="col-md-12 text-center hidden" style="margin-bottom:10px">
-				<div class="col-md-6 col-md-offset-3 text-center " style="margin-bottom:15px">
+			<div id="toolbarOutcomes" class="col-lg-12 text-center hidden"
+				style="margin-bottom: 10px">
+				<div class="col-lg-6 col-lg-offset-3 text-center "
+					style="margin-bottom: 15px">
 					<select id="outcomeRelationTypes" multiple="multiple">
 						<option value="in">Including</option>
 						<option value="ex">Excluding</option>
@@ -142,7 +144,7 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="col-md-12 col-lg-12">
+		<div class="col-lg-12">
 			<div class="row text-center">
 				<div id="visContent"></div>
 			</div>
