--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -105,7 +105,7 @@ limitations under the License.
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2 bg-warning"
+			<div class="col-lg-8 col-lg-offset-2 bg-warning"
 				style="padding: 20px 20px;">
 				<p>
 					<strong>These visualizations have been included from the
@@ -117,8 +117,6 @@ limitations under the License.
 				</p>
 			</div>
 		</div>
-
-		<!-- <hr style="margin-bottom: 0px;"> -->
 
 		<div class="row top-buffer">
 			<div id="visContentDIV" class="col-lg-9 text-center">
@@ -171,7 +169,6 @@ limitations under the License.
 			</div>
 		</div>
 	</div>
-	<!-- 	<div class="clearfix"></div> -->
 
 	<footer class="footer">
 		<div class="container">
