--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -21,19 +21,20 @@
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
-<link href="./css/prototypeLayout.css" rel="stylesheet" />
-<link href="./css/decisionRelations.css" rel="stylesheet" />
-<link href="./css/outcomeRelations.css" rel="stylesheet" />
+<link href="./css/knowledgeBase.css" rel="stylesheet" />
 
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
-<!-- <script src="./js/lib/d3.4.13.js" type="text/javascript"></script> -->
+<script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
+<script src="./js/lib/d3tip.js" type="text/javascript"></script>
+
+<!-- bootbox code -->
+<script src="./js/lib/bootbox.js" type="text/javascript"></script>
 </head>
 
-<body>
-
+<body style="min-width: 1500px">
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -73,38 +74,14 @@
 		</div>
 	</header>
 
-	<div class="container-fluid">
-<!-- 		<div class="row row-offcanvas row-offcanvas-left active">
-
-			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
-				id="sidebar" role="navigation">
-				<ul class="nav navbar-nav">
-					<li class="active"><a id="btnList_DecRel" href="#"> <span><strong>
-									Hierarchical Layout</strong></span></a></li>
-					<li><a href="#"> <span>Decision Relations</span>
-					</a></li>
-					<li><a href="#"> <span>Outcome Relations</span>
-					</a></li>
-				</ul>
-				<button id="toggleButton" type="button"
-					class="btn btn-primary hidden-sd hidden-xs" data-toggle="offcanvas">
-					<span class="glyphicon glyphicon-chevron-left"></span>
-				</button>
+	<div class="container-fluid" style="margin-top: 20px">
+		<div class="col-lg-12">
+			<div class="row text-center">
+				<div id="visContent"></div>
 			</div>
-
-			<div class="col-sm-12 col-md-10">
-				<div class="row">
-					<div class="col-md-12">
-
-					</div>
-				</div>
-				<div class="clearfix"></div>
-				<div class="row">
-					<div id="visContent" class="col-md-10"></div>
-				</div>
-			</div>
-		</div> -->
+		</div>
 	</div>
+
 
 	<footer class="footer">
 		<div class="container">
@@ -115,5 +92,7 @@
 
 	<!-- Include for Visualization -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
+	<script src="js/dynamicRelations.js" type="text/javascript"></script>
+	<script src="js/modals.js" type="text/javascript"></script>
 </body>
 </html>
