--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -18,6 +18,7 @@
 
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
+<link href="./css/bootstrap-switch.min.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
@@ -26,6 +27,7 @@
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
+<script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
@@ -34,7 +36,7 @@
 <script src="./js/lib/bootbox.js" type="text/javascript"></script>
 </head>
 
-<body style="min-width: 1500px">
+<body style="min-width: 1600px">
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -74,14 +76,52 @@
 		</div>
 	</header>
 
-	<div class="container-fluid" style="margin-top: 20px">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2 bg-warning"
+				style="padding: 20px 20px;">
+				<p>This view allows a selection of every decision of CloudDSF+
+					and shows the relations between outcomes. Occuring conflicts
+					through the user's choices will be highlighted and warnings might be raised. The
+					visualization of additional relations that do not directly
+					influence possible selections can be toggled with the respective
+					controls.</p>
+			</div>
+		</div>
+		<div class="row" id="toolbarDynamic" style="margin-top: 20px">
+			<div class="col-lg-5">
+				<div class="btn-group  btn-group-sm" role="group">
+					<button id="resetAll" class="btn btn-primary " role="button">
+						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+						Reset Selection
+					</button>
+					<a class="btn btn-primary" role="button"><span
+						class="glyphicon glyphicon-save" aria-hidden="true"></span> Store
+						Selection</a> <a class="btn btn-primary btn-file"><span
+						class="glyphicon glyphicon-open" aria-hidden="true"></span> Load
+						Selection <input id="loadSelection" type="file"></input> </a>
+				</div>
+			</div>
+			<div class="col-lg-7 text-right">
+				<div class="btn-group" role="group">
+					<span><strong>Relationships: </strong></span> <input
+						type="checkbox" name="toggleBinding" checked></input> <input
+						type="checkbox" name="toggleAffecting" checked></input> <input
+						type="checkbox" name="toggleAllowing" checked></input>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="container-fluid">
 		<div class="col-lg-12">
 			<div class="row text-center">
 				<div id="visContent"></div>
 			</div>
 		</div>
 	</div>
-
 
 	<footer class="footer">
 		<div class="container">
@@ -92,7 +132,8 @@
 
 	<!-- Include for Visualization -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
-	<script src="js/dynamicRelations.js" type="text/javascript"></script>
+	<script src="js/prototype.js" type="text/javascript"></script>
 	<script src="js/modals.js" type="text/javascript"></script>
+	<script src="js/dynamicRelations.js" type="text/javascript"></script>
 </body>
 </html>
