--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -105,11 +105,11 @@ limitations under the License.
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 bg-warning"
+			<div class="col-lg-12 bg-warning"
 				style="padding: 20px 20px;">
 				<p>
 					<strong>These visualizations have been included from the
-						old CloudDSF Prototype with minor adaptations only, hence
+						old <a href="www.clouddsf.com">CloudDSF Prototype</a> with minor adaptations only, hence
 						displaying errors may occur. The underlying data has been updated
 						to the new refined knowledge base. However, all tasks as well as
 						the relations between tasks and decisions have been adopted as-is
