--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -105,15 +105,16 @@ limitations under the License.
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-12 bg-warning"
-				style="padding: 20px 20px;">
+			<div class="col-lg-12 bg-warning" style="padding: 30px 20px;">
 				<p>
 					<strong>These visualizations have been included from the
-						old <a href="www.clouddsf.com">CloudDSF Prototype</a> with minor adaptations only, hence
-						displaying errors may occur. The underlying data has been updated
-						to the new refined knowledge base. However, all tasks as well as
-						the relations between tasks and decisions have been adopted as-is
-						wihout any review and might not be valid anymore.</strong>
+						old <a href="www.clouddsf.com">CloudDSF Prototype</a> with minor
+						adaptations only, hence displaying errors may occur. The
+						underlying data has been updated to the new refined knowledge
+						base. However, all tasks as well as the relations between tasks
+						and decisions have been adopted as-is wihout any review and might
+						not be valid anymore.
+					</strong>
 				</p>
 			</div>
 		</div>
@@ -145,12 +146,12 @@ limitations under the License.
 
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
-						<a id="visPanelInfoIconToggle" href="#"> <span
+						<a id="visPanelInfoIconToggle"> <span
 							class="glyphicon glyphicon-info-sign"></span>
 						</a>
 					</div>
 					<div class="visPanelHeaderLabel">
-						<a id="visPanelInfoLabelToggle" href="#"> <span>Information</span>
+						<a id="visPanelInfoLabelToggle"> <span>Information</span>
 						</a>
 					</div>
 					<div class="clearfix"></div>
