--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -28,12 +28,10 @@
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
-<script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
-
-<!-- bootbox code -->
 <script src="./js/lib/bootbox.js" type="text/javascript"></script>
+
 </head>
 
 <body style="min-width: 1600px">
@@ -54,23 +52,15 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span> --> <span><strong>
+					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li class="active"><a href="./cloudDSFPrototype.html"> <!-- <span
-							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					<li class="active"><a href="./cloudDSFPrototype.html"><span>Prototype</span>
 					</a></li>
-					<li><a href="./knowledgeBase.html"> <!--  <span
-							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
-								Base</span>
-					</a></li>
-					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
-							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
-								Visualizations</span>
-					</a></li>
-					<li><a href="./about.html"> <!-- <span
-							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
-					</a></li>
+					<li><a href="./knowledgeBase.html"><span>Knowledge
+								Base</span> </a></li>
+					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
+								Visualizations</span> </a></li>
+					<li><a href="./about.html"><span>About</span> </a></li>
 				</ul>
 			</nav>
 		</div>
@@ -82,10 +72,10 @@
 				style="padding: 20px 20px;">
 				<p>This view allows a selection of every decision of CloudDSF+
 					and shows the relations between outcomes. Occuring conflicts
-					through the user's choices will be highlighted and warnings might be raised. The
-					visualization of additional relations that do not directly
-					influence possible selections can be toggled with the respective
-					controls.</p>
+					through the user's choices will be highlighted and warnings might
+					be raised. The visualization of additional relations that do not
+					directly influence possible selections can be toggled with the
+					respective controls.</p>
 			</div>
 		</div>
 		<div class="row" id="toolbarDynamic" style="margin-top: 20px">
@@ -104,7 +94,7 @@
 			</div>
 			<div class="col-lg-7 text-right">
 				<div class="btn-group" role="group">
-					<span><strong>Relationships: </strong></span> <input
+					<span><strong>Additional Relationships: </strong></span> <input
 						type="checkbox" name="toggleBinding" checked></input> <input
 						type="checkbox" name="toggleAffecting" checked></input> <input
 						type="checkbox" name="toggleAllowing" checked></input>
