--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -15,25 +15,20 @@
 
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
-<link href="./css/bootstrap-multiselect.css" rel="stylesheet" />
+<link href="./css/bootstrap-switch.min.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
 <link href="./css/knowledgeBase.css" rel="stylesheet" />
-<!-- <link rel="stylesheet"
-	href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css"> -->
-
 
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
+<script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
 
-
 </head>
-
 <body>
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
@@ -52,29 +47,22 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span> --> <span><strong>
+					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <!-- <span
-							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					<li><a href="./cloudDSFPrototype.html"><span>Prototype</span>
 					</a></li>
-					<li class="active"><a href="./knowledgeBase.html"> <!--  <span
-							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
-								Base</span>
-					</a></li>
-					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
-							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
-								Visualizations</span>
-					</a></li>
-					<li><a href="./about.html"> <!-- <span
-							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
+					<li class="active"><a href="./knowledgeBase.html"><span>Knowledge
+								Base</span> </a></li>
+					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
+								Visualizations</span> </a></li>
+					<li><a href="./about.html"> <span>About</span>
 					</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
-	<div class="navbar navbar-inverse navbar-static-top subnav"
+	<div class="navbar navbar-inverse navbar-static-top subnav vspace"
 		role="navigation">
 		<div class="container">
 			<ul class="nav navbar-nav nav-justified">
@@ -91,54 +79,64 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<div class=row>
-			<div class="col-lg-12" style="margin-bottom: 10px">
-				<!-- Toolbar for decision Graph -->
-				<div id="toolbarDecisions"
-					class="col-lg-6 col-lg-offset-3 text-center hidden">
-					<select id="relationTypes" multiple="multiple">
-						<option value="Influencing">Influencing</option>
-						<option value="Requiring">Requiring</option>
-						<option value="Affecting">Affecting</option>
-						<option value="Binding">Binding</option>
-					</select>
-				</div>
-			</div>
-		</div>
-		<div class=row>
-			<div class="col-lg-12 text-center" style="margin-bottom: 10px">
-				<div id="toolbarTree" class="btn-group btn-group-justified"
-					role="group">
-					<a id="showDps" class="btn btn-default" role="button">Show All
-						Decision Points</a> <a id="showDecs" class="btn btn-default"
-						role="button">Show All Decisions</a> <a id="showOutcomes"
-						class="btn btn-default" role="button">Show All Outcomes</a>
+	<div class="container vspace">
+
+		<div class="row" id="toolbarTree">
+			<div class="col-lg-12 text-center">
+				<div class="btn-group-sm">
+					<button id="showDps" class="btn btn-primary" role="button">Show
+						All Decision Points</button>
+					<button id="showDecs" class="btn btn-primary" role="button">Show
+						All Decisions</button>
+					<button id="showOutcomes" class="btn btn-primary" role="button">Show
+						All Outcomes</button>
 				</div>
 			</div>
 		</div>
 
-		<div class=row>
-			<div id="toolbarOutcomes" class="col-lg-12 text-center hidden"
-				style="margin-bottom: 10px">
-				<div class="col-lg-6 col-lg-offset-3 text-center "
-					style="margin-bottom: 15px">
-					<select id="outcomeRelationTypes" multiple="multiple">
-						<option value="in">Including</option>
-						<option value="ex">Excluding</option>
-						<option value="a">Allowing</option>
-						<option value="aff">Affecting</option>
-						<option value="eb">Binding</option>
-					</select>
+		<div class="row hidden" id="toolbarDecisions">
+			<div class="col-lg-6">
+				<p>Test es</p>
+			</div>
+			<div class="col-lg-6">
+				<p>atere</p>
+			</div>
+			<div class="col-lg-12 text-center">
+				<div class="btn-group" role="group">
+					<span><strong>Toggle Relationships: </strong></span> <input
+						type="checkbox" name="toggleAll" checked></input> <input
+						type="checkbox" class="toggle-state-switch" name="toggleBinding"
+						checked></input> <input type="checkbox"
+						class="toggle-state-switch" name="toggleAffecting" checked></input>
+					<input type="checkbox" class="toggle-state-switch"
+						name="toggleInfluencing" checked></input> <input type="checkbox"
+						class="toggle-state-switch" name="toggleRequiring" checked></input>
 				</div>
-				<div class="btn-group btn-group-justified " role="group">
-					<a id="showAll" class="btn btn-default" role="button">Show All
-						Relations</a> <a id="hideAll" class="btn btn-default" role="button">Hide
-						All Relations</a> <a id="fixLayout" class="btn btn-default"
-						role="button">Fixated Layout</a> <a id="looseLayout"
-						class="btn btn-default" role="button">Loose Layout</a>
-				</div>
+			</div>
+		</div>
 
+		<div class="row hidden" id="toolbarOutcomes">
+			<div class="btn-group  btn-group-sm vspace" role="group">
+				<button id="showAll" class="btn btn-primary" role="button">Show
+					All Relations</button>
+				<button id="hideAll" class="btn btn-primary" role="button">Hide
+					All Relations</button>
+				<button id="fixLayout" class="btn btn-primary" role="button">Fixated
+					Layout</button>
+				<button id="looseLayout" class="btn btn-primary" role="button">Loose
+					Layout</button>
+			</div>
+
+
+			<div class="btn-group" role="group">
+				<span><strong>Relationships: </strong></span> <input type="checkbox"
+					name="outcomeToggleAll" checked></input> <input type="checkbox"
+					class="out-state-switch" name="outBinding" checked></input> <input
+					type="checkbox" class="out-state-switch" name="outAffecting"
+					checked></input> <input type="checkbox" class="out-state-switch"
+					name="outIncluding" checked></input> <input type="checkbox"
+					class="out-state-switch" name="outExcluding" checked></input> <input
+					type="checkbox" class="out-state-switch" name="outAllowing" checked></input>
 			</div>
 		</div>
 	</div>
@@ -150,7 +148,6 @@
 			</div>
 		</div>
 	</div>
-
 
 	<footer class="footer">
 		<div class="container">
