-fix toggle for outcome relations in static view

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -95,12 +95,6 @@
 		</div>
 
 		<div class="row hidden" id="toolbarDecisions">
-			<div class="col-lg-6">
-				<p>Test es</p>
-			</div>
-			<div class="col-lg-6">
-				<p>atere</p>
-			</div>
 			<div class="col-lg-12 text-center">
 				<div class="btn-group" role="group">
 					<span><strong>Toggle Relationships: </strong></span> <input
@@ -129,7 +123,7 @@
 
 
 			<div class="btn-group" role="group">
-				<span><strong>Relationships: </strong></span> <input type="checkbox"
+				<span><strong>Toggle Relationships: </strong></span> <input type="checkbox"
 					name="outcomeToggleAll" checked></input> <input type="checkbox"
 					class="out-state-switch" name="outBinding" checked></input> <input
 					type="checkbox" class="out-state-switch" name="outAffecting"
